# raytracer

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.txt  helloworld.cpp  main.cpp  main_gpu.cpp  rt.cu  rt.cuh
.devcontainer/: Dockerfile  devcontainer.json
assets/: basic.scene  spheramid.scene
inc/fqrt/: objects.hpp  scene.hpp  scene_gpu.hpp  tasks.hpp  util.hpp
results/: times.txt
